# pt-snap-cli

./: .gitignore  CLAUDE.md  CONFIG_USAGE.md  LICENSE  README.md  README_zh.md  pyproject.toml
.agents/quickstart/: 01-cli.md  02-context.md  03-models.md  04-query.md  ARCHITECTURE.md
.agents/superpowers/plans/: 2026-04-04-pt-snap-analyzer-analyzers.md  2026-04-04-pt-snap-analyzer-rag.md
.agents/superpowers/specs/.templates/: tasks-template.md
.agents/superpowers/specs/foundation/: checklist.md
.agents/superpowers/specs/query/: checklist.md  tasks.md
.agents/superpowers/specs/rag/: tasks.md
.agents/superpowers/specs/tests/: test-coverage-improvement.md
.gitcode/ISSUE_TEMPLATE/: config.yaml  documentation.yaml  feature_request.yaml  question.yaml
.gitcode/PULL_REQUEST_TEMPLATE/: pull_request_template.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  test.yml
docs/: README.md  snapshot_db_constraint_spec.md  snapshot_db_schema.md
docs/agent/: README-for-agents.md
docs/en/: context-management.md  database.md  focus-management.md  mcp.md  querying.md  quickstart.md  result-mapper-api.md
docs/superpowers/plans/: 2026-04-04-pt-snap-analyzer-foundation.md  2026-04-04-pt-snap-analyzer-query.md  README.md
docs/superpowers/prds/: 2026-04-04-pt-snap-analyzer-prd.md
docs/superpowers/specs/: 2026-04-04-pt-snap-analyzer-design.md
docs/superpowers/specs/.templates/: checklist-template.md  spec-template.md
docs/superpowers/specs/analyzers/: checklist.md  spec.md  tasks.md
docs/superpowers/specs/foundation/: checklist.md  spec.md  tasks.md
docs/superpowers/specs/query/: spec.md
docs/superpowers/specs/rag/: checklist.md  spec.md
docs/superpowers/specs/tests/: checklist.md  tasks.md
docs/zh/: context-management.md  database.md  focus-management.md  mcp.md  querying.md  quickstart.md  result-mapper-api.md
pt_snap_analyzer/: __init__.py  cli.py  config.py  context.py  version.py
pt_snap_analyzer/models/: __init__.py  block.py  event.py
pt_snap_analyzer/query/: __init__.py  builder.py  config.py  executor.py  registry.py
pt_snap_analyzer/query/templates/: active_blocks_v2.yaml  events_by_action_v2.yaml  leak_detection_v2.yaml  memory_timeline_v2.yaml
pt_snap_cli/: __init__.py  cli.py  config.py  version.py
pt_snap_cli/models/: _enums.py
pt_snap_cli/query/: __init__.py  config.py  executor.py  mapper.py  registry.py
pt_snap_cli/query/templates/: active_blocks.yaml  blocks_by_size.yaml  blocks_by_size_v2.yaml  callstack_analysis.yaml  callstack_analysis_v2.yaml  leak_detection.yaml  memory_summary_v2.yaml
src/pt_snap_cli/: __init__.py  api.py  cli.py  completion.py  config.py
src/pt_snap_cli/core/: __init__.py  errors.py  focus_service.py  models.py  query_service.py
src/pt_snap_cli/mcp/: server.py
src/pt_snap_cli/models/: __init__.py  block.py  event.py
src/pt_snap_cli/query/: builder.py  condition.py  config.py  executor.py  mapper.py  registry.py
src/pt_snap_cli/query/templates/: events_by_action.yaml  memory_peak.yaml  memory_summary.yaml  memory_timeline.yaml
src/pt_snap_cli/query/templates/basic/: active_blocks.yaml  allocation.yaml  block.yaml  blocks_by_size.yaml  (+3 more)
tests/: conftest.py  run_tests.sh  test_api.py  test_block.py  test_cli.py  test_completion.py  test_config.py  test_context.py  test_enums.py  test_event.py  test_mcp_server.py  test_models.py  test_package.py  test_query_builder.py  test_query_condition.py  test_query_config.py  test_query_executor.py  test_query_mapper.py  test_query_registry.py
tests/core/: test_focus_service.py  test_query_service.py
tests/query/: test_builder.py  test_config.py  test_executor.py  test_mapper.py  test_registry.py
(+3 files in other folders)
