[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pt-snap-cli"
version = "0.1.0b1"
description = "PyTorch Memory Snapshot Analysis CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Codeasier"}
]
keywords = ["pytorch", "memory", "snapshot", "analysis", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/codeasier/pt-snap-cli"
Repository = "https://github.com/codeasier/pt-snap-cli"
Issues = "https://github.com/codeasier/pt-snap-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "build>=1.0.0",
]
rag = [
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
]

[project.scripts]
pt-snap = "pt_snap_cli.cli:_safe_call"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pt_snap_cli*"]

[tool.setuptools.package-data]
pt_snap_cli = ["query/templates/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pt_snap_cli"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
fail_under = 0

[tool.coverage.xml]
output = "coverage.xml"